# vis_avs

./: .editorconfig  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CODE_ATLAS.md  CONTRIBUTING.md  README.md  avs.1.patch  avs.patch  run_build.sh  run_setup_dev_env.sh  run_setup_dev_environment.sh  unimlemented.lst
apps/avs-player/: CMakeLists.txt  main.cpp
apps/avs-studio/: CMakeLists.txt  README.md  main.cpp
libs/: CMakeLists.txt
libs/attic/: README.md
libs/avs/: CMakeLists.txt
libs/avs-audio-dsp/: CMakeLists.txt
libs/avs-audio-dsp/include/avs/: fft.hpp
libs/avs-audio-dsp/src/: analyzer.cpp  fft_kiss.cpp
libs/avs-audio-io/: CMakeLists.txt
libs/avs-audio-io/include/avs/: audio.hpp  audio_portaudio_internal.hpp
libs/avs-audio-io/patches/: portaudio-warnings.patch
libs/avs-audio-io/src/: AudioEngine.cpp  DeviceInfo.cpp  audio_portaudio.cpp
libs/avs-audio-pipewire/: CMakeLists.txt  README.md
libs/avs-audio-pipewire/src/: pipewire_input.cpp
libs/avs-base/: CMakeLists.txt
libs/avs-base/include/avs/: fs.hpp  platform.hpp
libs/avs-base/src/: fs_posix.cpp  platform.cpp
libs/avs-compat/: CMakeLists.txt
libs/avs-compat/include/avs/: core.hpp  cpu_features.hpp  eel.hpp  effect.hpp  effects.hpp  effects_misc.hpp  effects_render.hpp  effects_trans.hpp  engine.hpp  framebuffers_bridge.h  params.hpp  preset.hpp  registry.hpp
libs/avs-compat/src/: ape_eel_bridge.cpp  ape_loader.cpp  core.cpp  cpu_features.cpp  eel.cpp  effect_registry.cpp  effects_common.cpp  effects_misc.cpp  effects_render.cpp  effects_render_geometry.cpp  effects_trans.cpp  engine.cpp  headless_main.cpp  preset.cpp  registry.cpp
libs/avs-compat/src/effects/: additive_blend.cpp  blur.cpp  color_transform.cpp  colormap.cpp  composite.cpp  (+8 more)
libs/avs-core/: CMakeLists.txt
libs/avs-core/include/: README.md
libs/avs-core/src/: CPUFramebuffer.cpp  DeterministicRng.cpp  EffectRegistry.cpp  FileFramebuffer.cpp  OpenGLFramebuffer.cpp  Pipeline.cpp  ThreadPool.cpp  core.cpp  cpu_features.cpp  eel.cpp  effects_misc.cpp  effects_render.cpp  effects_render_geometry.cpp  effects_trans.cpp  engine.cpp  headless_main.cpp  preset.cpp  registry.cpp  stb_image_write_impl.cpp
libs/avs-dsl/: CMakeLists.txt
libs/avs-effects-legacy/: CMakeLists.txt
libs/avs-effects-legacy/src/: AudioOverlays.cpp  Bump.cpp  RegisterEffects.cpp  Swizzle.cpp  Text.cpp  TransformAffine.cpp  Zoom.cpp  effect_registry.cpp  graph.cpp  micro_preset_parser.cpp  register_all.cpp  registry.cpp
libs/avs-effects-legacy/tests/: test_registry.cpp
libs/avs-effects-modern/: CMakeLists.txt
libs/avs-math/: CMakeLists.txt
libs/avs-platform/: CMakeLists.txt
libs/avs-platform/src/: audio_portaudio.cpp  fft_kiss.cpp  fs_posix.cpp  platform.cpp  window_sdl_gl.cpp
libs/avs-preset/: CMakeLists.txt
libs/avs-preset/src/: binder.cpp  json_serializer.cpp  parser.cpp
libs/avs-preset/tests/: test_ir_and_binder.cpp
libs/avs-render-gl/: CMakeLists.txt
libs/avs-render-gl/src/: window_sdl_gl.cpp
libs/avs-testing/: CMakeLists.txt
libs/avs-testing/src/: Md5.cpp  OffscreenRenderer.cpp
libs/avs/audio/: AudioEngine.cpp  AudioEngine.hpp  CMakeLists.txt  DeviceInfo.cpp
libs/avs/core/: CMakeLists.txt
libs/avs/effects/: CMakeLists.txt
libs/avs/offscreen/: CMakeLists.txt  Md5.cpp  Md5.hpp  OffscreenRenderer.cpp  OffscreenRenderer.hpp
libs/avs/runtime/: CMakeLists.txt
tests/: CMakeLists.txt  audio_underflow_tests.cpp  avs_core_tests.cpp  deterministic_render_test.cpp  test_eel_context.cpp  test_pixel_ops.cpp  test_registry_builtin.cpp
tests/audio/: test_analyzer.cpp  test_device_negotiation.cpp
tests/core/: test_blend_ops.cpp  test_channel_shift.cpp  test_color_modifier.cpp  test_colorfade.cpp  test_effect_registry.cpp  test_gating.cpp  test_globals_and_bump.cpp  test_misc_comment.cpp  test_misc_custom_bpm.cpp  test_multi_delay.cpp  test_oscilloscope_star.cpp  test_pipeline.cpp  test_primitives.cpp  test_render_bass_spin.cpp  test_render_dot_fountain.cpp  test_render_mode.cpp  test_render_moving_particle.cpp  test_render_ring.cpp  test_render_svp_loader.cpp  test_render_timescope.cpp  test_rotating_stars.cpp  test_roto_blitter.cpp  test_scripted_effect.cpp  test_simple_spectrum.cpp  test_trans_brightness.cpp  test_trans_mosaic.cpp  test_trans_multiplier.cpp  test_trans_scatter.cpp  test_trans_unique_tone.cpp  test_transform_affine.cpp  test_video_delay.cpp
tests/data/: moving_wave.avs  simple.avs
tests/data/micro_presets/: blend_additive.txt  blend_alpha.txt  overlay_blendslide.txt  swizzle_bgr.txt
tests/data/phase1/: README.md
tests/data/presets/: complex.json  simple.json
tests/effects/render/: test_timescope.cpp
tests/framebuffer/: test_framebuffer_backends.cpp
tests/golden/: hashes.txt  micro_blend_md5.txt  scripted_md5.txt
tests/golden/phase1/: README.md
tests/integration/: test_preset_validation.cpp  test_rendercontext_framebuffer.cpp
tests/presets/audio_vis/: test_audio_vis.cpp
tests/presets/dynamic/: test_dynamic.cpp
tests/presets/fb_ops/: md5_helper.cpp  md5_helper.hpp  persist.md5  save_restore.md5  slide_transition.md5  test_fb_ops.cpp  wrap.md5
tests/presets/filters/: test_filters.cpp
tests/presets/gating/: sticky_only.txt  test_gating.cpp
tests/presets/render/: test_render_bass_spin.cpp  test_simple_spectrum.cpp
tests/presets/scripted/: dot.micro  radial.micro  transform.micro
tests/presets/trans/: test_blitter_feedback.cpp  test_trans.cpp  test_trans_blur.cpp  test_trans_water_bump.cpp
tests/presets/transforms/: rotate_center.txt  test_transform_affine.cpp
tests/regression/: test_offscreen_golden.cpp
tests/regression/data/: expected_md5_320x240_seed1234.json  tiny_preset_fragment.avs
tests/runtime/: effect_list_parser_tests.cpp  test_resources.cpp  test_runtime_compositing.cpp
tests/runtime/parser/: effect_list_parser_tests.cpp
tests/scripts/: generate_phase1_goldens.py  verify_golden_md5.py
tools/: CMakeLists.txt  audit_effects.py  avs-convert.cpp  ensure_build_dependencies.sh  gen_golden_md5.cpp  get_unimplemented_effects.sh  run_tool.py  update_goldens.sh
(+726 files in other folders)
