add_subdirectory(third_party/ns-eel)
add_subdirectory(avs)
add_subdirectory(avs-core)
option(AVS_BUILD_PLATFORM "Build SDL/OpenGL platform layer" ON)
if(AVS_BUILD_PLATFORM)
  add_subdirectory(avs-platform)
else()
  add_library(avs-platform INTERFACE)
endif()

option(AVS_BUILD_OFFSCREEN "Build offscreen renderer utilities" ON)
if(AVS_BUILD_OFFSCREEN)
  add_subdirectory(avs/offscreen)
endif()
